--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -4,4 +4,6 @@
 <p><strong>Email:</strong> <%= @owner.email %></p>
 <p><strong>Phone Number:</strong> <%= @owner.phone %></p>
 
+<p><strong>Pets:</strong> <%= @owner.pets[0] %></p>
+
 <%= link_to "View this owner's pet(s)", owner_pets_path(@owner) %>
