--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,2 +1,6 @@
-<h1>All Pets for <%= @owner.email %></h1>
+<h1>All Pets for <%= @owner.first_name %></h1>
 <hr>
+<% @owner.pets.each do |p| %>
+  <%= p.name %>
+  <%= p.breed %>
+<% end %>
