--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,3 +1,14 @@
-<h1>New Owner</h1>
+<h1>New Owner Sign up!</h1>
 <hr>
-<%= render "form" %>
+
+<%= form_for :owner, url: '/owners' do |f| %>
+
+  
+  Email: <%= f.text_field :email %><br>
+  Password: <%= f.password_field :password %><br>
+  Password Confirmation: <%= f.password_field :password_confirmation %><br>
+  <%= f.submit "Submit" %>
+
+<% end %>
+
+<!-- <%= render "form" %> -->
