--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <body>
 
   <% if current_owner %>
-    Signed in as <%= current_owner.name %> | <%= link_to "Logout", '/logout' %>
+    Signed in as <%= current_owner.first_name %> | <%= link_to "Logout", '/logout' %>
   <% else %>
     <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
   <% end %>
